add google fonts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+ font-family: 'Bigelow Rules', cursive;
+ font-family: 'Ramaraja', serif;
+ font-family: 'Rancho', helvetica, arial;
