add player scoring controller and index.  team photos.  player phot links

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -22,9 +22,8 @@
 }
 
 .stat_cat {
-  border: solid black 2px;
-  display: inline-block;
-  text-align: center;
+  display: inline-block;;
+  text-align: left;
   padding: 5px;
   border-radius: 10px;
   font-family: Ramaraja;
