--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,5 @@
  *= require_self
  */
 
- font-family: 'Bigelow Rules', cursive;
- font-family: 'Ramaraja', serif;
- font-family: 'Rancho', helvetica, arial;
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
