--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <link rel="icon" type="image/png" href="/assets/Parkie.png">
     <title>NBA STATS</title>
-    <link href="https://fonts.googleapis.com/css?family=Rancho|Bigelow+Rules|Ramaraja" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Righteous|Wendy+One" rel="stylesheet">
+
       <%= stylesheet_link_tag    "application" %>
       <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
