--- a/app/views/player_scoring_playoffs/index.html.erb
+++ b/app/views/player_scoring_playoffs/index.html.erb
@@ -1,27 +1,24 @@
-
-<h1 class="title">ELITE DEFENSE</h1>
-
-<h2 class="elite_description">Teams in TOP 10 in Opposition FG%, 3pt%, Turnovers and Margin of Victory</h2>
+<h1 class="main_header"><img class="dribble_pic" src="http://media-spacejam.cursecdn.com/avatars/thumbnails/4/357/384/384/p6_240_8929.png" alt="">Scoring: Off the dribble <img class="dribble_pic" src="http://i.cdn.turner.com/nba/nba/.element/media/2.0/teamsites/clippers/playoffslider/chris-paul-stats-full.png" alt=""></h1>
 
 
 <% @players.each do |player| %>
 
   <%       if player[:minutes] > 25 && player[:pct_uast_3pm] > 0.50 && player[:pct_uast_2pm] > 0.70 %>
+<div class="col-md-4">
 
-  <div class="elite_player_info">
-    <img class="logo" src="https://ru.global.nba.com/media/img/players/head/230x185/<%= player[:id] %>.png"</img>
+    <img class="img-rounded" src="https://ru.global.nba.com/media/img/players/head/230x185/<%= player[:id] %>.png"</img>
+    <div class="stats">
+      <p class="header"> <%= player[:name] %></p>
+      <p class="player_stats"> Minutes: <%= player[:minutes] %> </p>
+      <p class="player_stats"> % of Made 3's Unast: <%=player[:pct_uast_3pm] %> Rank: <%= player[:pct_uast_3pm_rank] %> </p>
+      <p class="player_stats"> % of Made 2's Unast: <%=player[:pct_uast_2pm] %> Rank: <%= player[:pct_uast_2pm_rank] %> </p>
+      <p class="player_stats"> Games Played: <%=player[:games_played] %> </p>
+    </div>
 
-    <ul> <%= player[:name] %> </ul>
-    <li class="player_stats"> Minutes: <%= player[:minutes] %> </li>
-    <li class="player_stats"> Percentage of Made 3's Unassisted: <%=player[:pct_uast_3pm] %> Rank: <%= player[:pct_uast_3pm_rank] %> </li>
-    <li class="player_stats"> Percentage of Made 2's that were Unassisted: <%=player[:pct_uast_2pm] %> Rank: <%= player[:pct_uast_2pm_rank] %> </li>
-    <li class="player_stats"> Games Played: <%=player[:games_played] %> </li>
 
-<br>
+</div>
 
-  </div>
-  <br>
-  <br>
+
 
   <% end %>
 
