--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
   <body>
+    <h1 class="knuckles">Numbers by Knuckles</h1>
     <%= yield %>
   </body>
 </html>
